samples/_failures_safe/1761692494_334da4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a386ccd5.c: In function ‘main’:
./samples/SAFE/__tmp_a386ccd5.c:136:9: error: expected declaration or statement at end of input
  136 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_a386ccd5.c:136:9: error: expected declaration or statement at end of input
